tentando ordenas as categorias

--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
                 </div>
             </section>
 
-            <!-- Botão Adicionar Novo Produto -->
+            <!-- Botões Adicionar -->
             <div class="adicionar-produto-section">
                 <button id="btn-adicionar-produto" class="btn-adicionar-produto">
                     <i class="fas fa-plus-circle"></i> Adicionar Novo Produto
+                </button>
+                <button id="btn-adicionar-categoria" class="btn-adicionar-produto">
+                    <i class="fas fa-folder-plus"></i> Adicionar Categoria
                 </button>
             </div>
 
