--- a/index.html
+++ b/index.html
@@ -203,25 +203,38 @@
 
     <!-- Modal de Edição/Adição de Item -->
     <div id="modal-editar-item" class="modal">
-        <div class="modal-content modal-small">
+        <div class="modal-content" id="modal-editar-item-content">
             <div class="modal-header">
                 <h2 id="modal-editar-item-titulo">Editar Item</h2>
                 <span class="close-modal" data-modal="editar-item">&times;</span>
             </div>
             <div class="modal-body">
-                <div class="form-group">
-                    <label for="modal-editar-item-nome">Nome do Item:</label>
-                    <input type="text" id="modal-editar-item-nome" class="form-input" placeholder="Digite o nome do item">
+                <!-- Modo Edição (formulário simples) -->
+                <div id="modal-editar-item-form-simples">
+                    <div class="form-group">
+                        <label for="modal-editar-item-nome">Nome do Item:</label>
+                        <input type="text" id="modal-editar-item-nome" class="form-input" placeholder="Digite o nome do item">
+                    </div>
+                    <div class="form-group" id="modal-editar-item-valor-group" style="display: none;">
+                        <label for="modal-editar-item-valor">Preço (R$):</label>
+                        <input type="number" id="modal-editar-item-valor" class="form-input" step="0.01" min="0" placeholder="0,00">
+                    </div>
+                    <div class="form-group">
+                        <label for="modal-editar-item-categoria">Categoria:</label>
+                        <select id="modal-editar-item-categoria" class="form-input">
+                            <option value="">Selecione uma categoria...</option>
+                        </select>
+                    </div>
                 </div>
-                <div class="form-group" id="modal-editar-item-valor-group" style="display: none;">
-                    <label for="modal-editar-item-valor">Preço (R$):</label>
-                    <input type="number" id="modal-editar-item-valor" class="form-input" step="0.01" min="0" placeholder="0,00">
-                </div>
-                <div class="form-group">
-                    <label for="modal-editar-item-categoria">Categoria:</label>
-                    <select id="modal-editar-item-categoria" class="form-input">
-                        <option value="">Selecione uma categoria...</option>
-                    </select>
+                
+                <!-- Modo Adicionar Múltiplos (linhas dinâmicas) -->
+                <div id="modal-editar-item-form-multiplos" style="display: none;">
+                    <div class="form-group">
+                        <label>Itens a Adicionar:</label>
+                        <div id="modal-itens-linhas" class="itens-linhas-container">
+                            <!-- Linhas serão adicionadas dinamicamente aqui -->
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
