--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                 <button id="btn-adicionar-categoria" class="btn-adicionar-produto">
                     <i class="fas fa-folder-plus"></i> Adicionar Categoria
                 </button>
+                <button id="btn-painel-admin" class="btn-adicionar-produto" style="background: #6c757d;">
+                    <i class="fas fa-cog"></i> Painel Admin
+                </button>
             </div>
 
             <!-- Lista de Itens por Categoria -->
@@ -240,6 +243,79 @@
             <div class="modal-footer">
                 <button id="btn-editar-item-cancel" class="btn-secondary">Cancelar</button>
                 <button id="btn-editar-item-ok" class="btn-primary">Salvar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Painel Admin -->
+    <div id="modal-painel-admin" class="modal">
+        <div class="modal-content modal-large">
+            <div class="modal-header">
+                <h2>Painel Administrativo</h2>
+                <span class="close-modal" data-modal="painel-admin">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div class="admin-section">
+                    <h3><i class="fas fa-image"></i> Logo do Sistema</h3>
+                    <div class="form-group">
+                        <label for="admin-logo-upload">Selecionar Nova Logo:</label>
+                        <input type="file" id="admin-logo-upload" accept="image/*" class="form-input">
+                        <small class="form-help">Formatos aceitos: PNG, JPG, GIF, SVG (recomendado: PNG com fundo transparente)</small>
+                    </div>
+                    <div class="logo-preview-container">
+                        <label>Preview da Logo:</label>
+                        <div class="logo-preview">
+                            <img id="logo-preview-img" src="logo.png" alt="Preview Logo" style="max-width: 200px; max-height: 200px; border-radius: 50%;">
+                        </div>
+                        <button id="btn-remover-logo" class="btn-secondary" style="margin-top: 10px;">
+                            <i class="fas fa-trash"></i> Remover Logo
+                        </button>
+                    </div>
+                </div>
+
+                <div class="admin-section">
+                    <h3><i class="fas fa-palette"></i> Cores do Sistema</h3>
+                    <div class="color-picker-group">
+                        <div class="form-group">
+                            <label for="admin-cor-primaria">Cor Primária (Botões, Headers):</label>
+                            <div class="color-input-wrapper">
+                                <input type="color" id="admin-cor-primaria" value="#FF6B35" class="color-picker">
+                                <input type="text" id="admin-cor-primaria-text" value="#FF6B35" class="color-text-input" placeholder="#FF6B35">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="admin-cor-secundaria">Cor Secundária (Botões Secundários):</label>
+                            <div class="color-input-wrapper">
+                                <input type="color" id="admin-cor-secundaria" value="#2a2a2a" class="color-picker">
+                                <input type="text" id="admin-cor-secundaria-text" value="#2a2a2a" class="color-text-input" placeholder="#2a2a2a">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="admin-cor-fundo">Cor de Fundo:</label>
+                            <div class="color-input-wrapper">
+                                <input type="color" id="admin-cor-fundo" value="#1a1a1a" class="color-picker">
+                                <input type="text" id="admin-cor-fundo-text" value="#1a1a1a" class="color-text-input" placeholder="#1a1a1a">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="color-preview">
+                        <label>Preview das Cores:</label>
+                        <div class="preview-boxes">
+                            <div class="preview-box" id="preview-primaria">Primária</div>
+                            <div class="preview-box" id="preview-secundaria">Secundária</div>
+                            <div class="preview-box" id="preview-fundo">Fundo</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="btn-admin-resetar" class="btn-secondary">
+                    <i class="fas fa-undo"></i> Resetar para Padrão
+                </button>
+                <button id="btn-admin-cancel" class="btn-secondary">Cancelar</button>
+                <button id="btn-admin-salvar" class="btn-primary">
+                    <i class="fas fa-save"></i> Salvar Configurações
+                </button>
             </div>
         </div>
     </div>
