--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <i class="fas fa-folder-plus"></i> Adicionar Categoria
                 </button>
                 <button id="btn-painel-admin" class="btn-adicionar-produto" style="background: #6c757d;">
-                    <i class="fas fa-cog"></i> Painel Admin
+                    <i class="fas fa-cog"></i> Painel de Personalização
                 </button>
             </div>
 
@@ -251,7 +251,7 @@
     <div id="modal-painel-admin" class="modal">
         <div class="modal-content modal-large">
             <div class="modal-header">
-                <h2>Painel Administrativo</h2>
+                <h2>Painel de Personalização</h2>
                 <span class="close-modal" data-modal="painel-admin">&times;</span>
             </div>
             <div class="modal-body">
